--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,3 +1,3 @@
 <% @songs.each do |song| %>
-<p><%= song.name %> - </p>
+<p><%= song.name %> - <%= link_to "See song", song_path(song) %></p>
 <% end %>
