--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -1,9 +1,9 @@
 <%= form_for @artist do |f| %>
 <%= f.label :name %>
-<%= f.text_field :name %>
+<%= f.text_field :name %><br>
 
 <%= f.label :bio %>
-<%= f.text_field :bio %>
+<%= f.text_field :bio %><br>
 
 <%= f.submit %>
 <% end %>
